🐞 fix: attempt to fix fails of build site.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,10 @@ livereload: true
 highlighter: rouge
 
 # Build settings
-theme: just-the-docs
+# theme: just-the-docs
+remote_theme: just-the-docs
+
+# plugins
 plugins:
   # - jekyll-feed
   - jekyll-toc
