🔧 build: site cfg modfied

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,12 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: C++语法教程
-# description: >- # this means to ignore newlines until "baseurl:"
-domain: bobokick.github.io
+description: cpp elementary guides.
 url: "https://bobokick.github.io/Cpp_Guide_detailed" # the base hostname & protocol for your site, e.g. http://example.com
+repository: https://github.com/bobokick/Cpp_Guide_detailed
 baseurl: "/" # the subpath of your site, e.g. /blog
-twitter_username: bobokick
-github_username:  bobokick
+strict_front_matter: true
 permalink: none
 incremental: false
 livereload: true
