--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: C++语法教程
 description: cpp elementary guides.
 url: "https://bobokick.github.io/Cpp_Guide_detailed" # the base hostname & protocol for your site, e.g. http://example.com
-repository: https://github.com/bobokick/Cpp_Guide_detailed
+repository: bobokick/Cpp_Guide_detailed
 baseurl: "/" # the subpath of your site, e.g. /blog
 strict_front_matter: true
 permalink: none
