--- a/.github/workflows/action_test.yml
+++ b/.github/workflows/action_test.yml
@@ -6,9 +6,9 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: ["master"]
+    branches: ["no_existed"]
   pull_request:
-    branches: ["master"]
+    branches: ["no_existed"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
