--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -8,6 +8,9 @@ on:
       - "docs/**"
       - ".github/workflows/build-jekyll.yml"
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -30,7 +33,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }} # It's your Personal Access Token(PAT)
           ssh_private_key: ''        # It's your SSH private key (SSH approach)
           repository: ''             # Default is current repository
-          branch: 'gh-pages'         # Default is gh-pages for github provider
+          branch: 'test-pages'         # Default is gh-pages for github provider
           jekyll_src: './docs'           # Default is root directory
           jekyll_cfg: '_config.yml'  # Default is _config.yml
           jekyll_baseurl: ''         # Default is according to _config.yml
