--- a/.github/workflows/build_and_deploy_jekyll.yml
+++ b/.github/workflows/build_and_deploy_jekyll.yml
@@ -11,10 +11,14 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Grant GITHUB_TOKEN the permissions required to make a Pages deployment
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+    # to commit and push to a branch
     contents: write
+    # to deploy to Pages
     pages: write
+    # to verify the deployment originates from an appropriate source
     id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
@@ -25,7 +29,10 @@ concurrency:
 
 jobs:
   # Build job
-  build_and_upload:
+  build_and_deployments:
+    environment:
+        name: github-pages
+        url: https://${{ github.repository_owner }}.github.io/Cpp_Guide_detailed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout To Repository
@@ -57,15 +64,3 @@ jobs:
           cname: ''                  # Default is to not use a cname
           actor: ''                  # Default is the GITHUB_ACTOR
           pre_build_commands: ''     # Installing additional dependencies (Arch Linux)
-
-  # Deployment job
-  deployment:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build_and_upload
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
