--- a/.github/workflows/build_and_deploy_jekyll.yml
+++ b/.github/workflows/build_and_deploy_jekyll.yml
@@ -30,9 +30,6 @@ concurrency:
 jobs:
   # Build job
   build_and_deployments:
-    environment:
-        name: github-pages
-        url: https://${{ github.repository_owner }}.github.io/Cpp_Guide_detailed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout To Repository
@@ -64,3 +61,9 @@ jobs:
           cname: ''                  # Default is to not use a cname
           actor: ''                  # Default is the GITHUB_ACTOR
           pre_build_commands: ''     # Installing additional dependencies (Arch Linux)
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+            folder: . # The folder the action should deploy.
+            branch: 'test-pages'
