🔧 build: adjust build action

--- a/.github/workflows/build_and_deploy_jekyll.yml
+++ b/.github/workflows/build_and_deploy_jekyll.yml
@@ -62,8 +62,8 @@ jobs:
           actor: ''                  # Default is the GITHUB_ACTOR
           pre_build_commands: ''     # Installing additional dependencies (Arch Linux)
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-            folder: . # The folder the action should deploy.
-            branch: 'test-pages'
+    #   - name: Deploy 🚀
+    #     uses: JamesIves/github-pages-deploy-action@v4
+    #     with:
+    #         folder: . # The folder the action should deploy.
+    #         branch: 'test-pages'
