🔧 build: adjust base url bug

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -15,9 +15,11 @@ gem "just-the-docs"
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 gem "github-pages", "~> 228", group: :jekyll_plugins
 
+gem "kramdown-syntax-coderay", "~> 1.0"
+
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-#   gem "jekyll-feed", "~> 0.12"
+    gem 'classifier-reborn'
     gem 'jekyll-toc'
 end
 
@@ -34,5 +36,3 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 # Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds since newer versions of the gem
 # do not have a Java counterpart.
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
-
-# gem "kramdown-syntax-coderay", "~> 1.0"
