--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,7 @@ source_branch: "master"
 repository: bobokick/Cpp_Guide_detailed
 
 github_url: "https://github.com"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/Cpp_Guide_detailed" # the subpath of your site, e.g. /blog
 
 strict_front_matter: true
 permalink: none
@@ -57,10 +57,8 @@ gist:
   noscript: false
 
 kramdown:
-  syntax_highlighter: coderay
-  syntax_highlighter_opts:
-    line_numbers: table
-    bold_every: 5
+  math_engine: mathjax
+  syntax_highlighter: rouge
 
 collections_dir: my_collections
 # Define Jekyll collections
