--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -154,7 +154,7 @@ search:
   rel_url: true
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
-  button: false
+  button: true
 
 
 mermaid:
